# WorkshopWeek12

./: CMakeLists.txt
WorkshopWeek12/: Animal.cpp  Animal.h  AnimalType.h  CMakeLists.txt  Diet.h  Elephant.cpp  Elephant.h  Entity.h  Factory.cpp  Factory.h  Giraffe.cpp  Giraffe.h  Hippo.cpp  Hippo.h  Human.h  Hyena.cpp  Hyena.h  Lion.cpp  Lion.h  Location.h  WorkshopWeek12.cpp  WorkshopWeek12.h
